--- a/Project03/Project03.css
+++ b/Project03/Project03.css
@@ -21,7 +21,8 @@ padding: 0;
 
 body {
   color: #000;
-  background-color: #f4f4f4;
+  background-color: #6b063e;
+  z-index: 100;
   transition: background-color 1s ease;
 
   /* background: linear-gradient(black, pink, hotpink, steelblue, midnightblue); */
@@ -49,9 +50,7 @@ h2 {
 .color-violet {
   background-color: #7A4EAB;
 }
-.color-indigo {
-  background-color: #4332CF;
-}
+
 .color-blue {
   background-color: #2F8FED;
 }
@@ -61,9 +60,7 @@ h2 {
 .color-yellow {
   background-color: #FAEB33;
 }
-.color-orange {
-  background-color: #F19031;
-}
+
 .color-red {
   background-color: #F2293A;
 }
@@ -266,6 +263,8 @@ p a:hover{
 .happyface {
   position: relative;
   margin: 0 auto;
+  left:10%;
+  top:5%;
 }
 
 .happyface:hover {
@@ -346,80 +345,38 @@ p a:hover{
   left:550px;
   top:700px;
 }
-.dogBone {
-  display: inline-block;
-  position:absolute;
-  left:940px;
-  top:1310px;
-  z-index:2;
-  width: 50px;
-  height: 50px;
-  transition:transform 700ms ;
 
-}
-.dogwalk{
+.WakeHappyUp{
   text-align: center;
-  z-index: 5;
-}
-.dogwalk img {
-  z-index: 5;
-}
-
-.dogball1{
-  position: absolute;
-  top:16%;
-  left:46%;
-  z-index: 1;
-  opacity: 0;
-}
-
-
-.dogball2{
-  position: absolute;
-  top:16%;
-  left:46%;
-  z-index: 1;
-  opacity: 0;
-}
-.dogball3{
-  position: absolute;
-  top:16%;
-  left:46%;
-  z-index: 1;
-}
-.dogball4{
-  position: absolute;
-  top:16%;
-  left:46%;
-  z-index: 1;
-  opacity: 0;
-}
-
-.showDogBall1 {
-  opacity: 1;
-  transform: translateX(-200px) rotate(45deg);
-  transition: all 2s ease;
-}
-.showDogBall2 {
-  opacity: 1;
-  transform: translateX(200px) rotate(-45deg);
-  transition: all 2s ease;
 }
 
 .HappyChicken{
-  position:absolute;
-  left:207px;
-  top:2590px;
+  text-align: center;
+}
+.Happytongue{
+  position: absolute;
+  left:70%;
 }
 
+
+
+
+
+
+
+.dogBone {
+  text-align: center;
+  z-index:2;
+  transition:transform 500ms ;
+}
 .dogBone:hover{
-    transform:translate(20px,-180px)
+    transform:translateX(20px,180px)
 }
 
 .riceball {
-  position:absolute;
-  left:890px;
-  top:1280px;
+
+  text-align: center;
+
 }
 .riceball:hover {
   animation: shake 0.3s;
@@ -434,12 +391,188 @@ p a:hover{
   100% { transform: translate(1px, -2px) rotate(-5deg); }
 }
 
-#myButton {
-  position: absolute;
-  left:480px;
-  top:900px;
-  height: 300px;
+
+
+
+.dogwalk{
+  text-align: center;
+  z-index: 5;
 }
+.dogwalk img {
+  z-index: 5;
+}
+
+
+.dogball1{
+  position: absolute;
+  top:16%;
+  left:46%;
+  z-index: 1;
+  opacity: 0;
+
+}
+.dogball2{
+  position: absolute;
+  top:16%;
+  left:46%;
+  z-index: 1;
+  opacity: 0;
+  overflow: hidden;
+  transition-duration: 0.3s;
+  transition-property: transform;
+}
+.dogball2:hover {
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+}
+
+.dogball3{
+  position: absolute;
+  top:16%;
+  left:46%;
+  z-index: 1;
+  opacity:0;
+}
+.dogball4{
+  position: absolute;
+  top:16%;
+  left:46%;
+  z-index: 1;
+  opacity: 0;
+  overflow: hidden;
+  transition-duration: 0.8s;
+  transition-property: transform;
+}
+.dogball4:hover {
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+}
+
+.showDogBall1 {
+  opacity: 1;
+  transform: translateY(-300px) rotate(45deg);
+  transition: all 2s ease;
+}
+.showDogBall2 {
+  opacity: 1;
+  transform: translateX(300px) rotate(-45deg);
+  transition: all 2s ease;
+}
+.showDogBall3 {
+  opacity: 1;
+  transform: translateY(200px) rotate(-45deg);
+  transition: all 2s ease;
+}
+.showDogBall4 {
+  opacity: 1;
+  transform: translateX(-300px) rotate(45deg);
+  transition: all 2s ease;
+}
+
+
+
+
+.happySleep{
+  text-align: center;
+  z-index: 120;
+
+  -webkit-animation: hover_y 7s ease-in-out infinite;
+  -moz-animation: hover_y 7s ease-in-out infinite;
+  -o-animation: hover_y 7s ease-in-out infinite;
+  animation: hover_y 7s ease-in-out infinite;
+}
+
+@-webkit-keyframes hover_y {
+ 0%, 100% {
+		transform: translateY(0);
+	}
+	50% {
+		transform: translateY(10%);
+	}
+}
+@-moz-keyframes hover_y {
+  0%, 100% {
+		transform: translateY(0);
+	}
+	50% {
+		transform: translateY(10%);
+	}
+}
+@-o-keyframes hover_y {
+  0%, 100% {
+		transform: translateY(0);
+	}
+	50% {
+		transform: translateY(10%);
+	}
+}
+@keyframes hover_y {
+	0%, 100% {
+		transform: translateY(0);
+	}
+	50% {
+		transform: translateY(10%);
+	}
+}
+
+@-webkit-keyframes hover_x {
+  0%, 100% {
+		transform: translateX(0);
+	}
+	50% {
+		transform: translateX(5%);
+	}
+}
+@-moz-keyframes hover_x {
+  0%, 100% {
+		transform: translateX(0);
+	}
+	50% {
+		transform: translateX(5%);
+	}
+}
+@-o-keyframes hover_x {
+  0%, 100% {
+		transform: translateX(0);
+	}
+	50% {
+		transform: translateX(5%);
+	}
+}
+@keyframes hover_x {
+  0%, 100% {
+		transform: translateX(0);
+	}
+	50% {
+		transform: translateX(5%);
+	}
+}
+
+.stars {
+      position:absolute;
+      top:500%;
+      bottom:100%;
+      width:100%;
+      height:100%;
+      display:block;
+
+
+    }
+.stars {
+      background:#000 url(image/stars.png) repeat top center;
+      z-index:0;
+      opacity: 0.5;
+    }
+
+
+
+
+
+
+/* #myButton {
+  position: absolute;
+
+} */
 
 
 
