--- a/Project03/Project03.css
+++ b/Project03/Project03.css
@@ -555,14 +555,16 @@ p{
 } */
 .ClickDog{
   position: absolute;
-  top:52%;
-  left: 32%;
+  top:38%;
+  left:35%;
+  z-index:4;
 }
 h4{
   position:absolute;
-  top: 52%;
-  left:25.5%;
+  top: 38%;
+  left:29%;
   color:white;
+  z-index: 10;
 }
 
 
@@ -573,8 +575,10 @@ h4{
 .dogwalk img {
   z-index: 5;
   position: absolute;
-  top:50%;
+  top:30%;
   left: 30%;
+  width: 40%;
+  height: auto;
 }
 
 
@@ -604,14 +608,14 @@ h4{
 .dogball3{
   position: absolute;
   top:16%;
-  left:46%;
+  left:26%;
   z-index: 1;
   opacity:0;
 }
 .dogball4{
   position: absolute;
   top:16%;
-  left:46%;
+  left:26%;
   z-index: 1;
   opacity: 0;
   overflow: hidden;
@@ -630,17 +634,17 @@ h4{
 }
 .showDogBall2 {
   opacity: 1;
-  transform: translateX(300px)translateY(-80px) rotate(-345deg);
+  transform: translateX(280px)translateY(-80px) rotate(-345deg);
   transition: all 2s ease;
 }
 .showDogBall3 {
   opacity: 1;
-  transform: translateX(400px) translateY(200px) rotate(-165deg);
+  transform: translateX(600px) translateY(200px) rotate(-165deg);
   transition: all 2s ease;
 }
 .showDogBall4 {
   opacity: 1;
-  transform: translateX(-300px) translateY(100px)rotate(285deg);
+  transform: translateX(-320px) translateY(100px)rotate(285deg);
   transition: all 2s ease;
 }
 
@@ -980,17 +984,18 @@ h4{
   .showDogBall2 {
 
     opacity: 1;
-    transform: translateX(-50px)translateY(50px) rotate(-345deg);
+    transform: translateX(-70px)translateY(20px) rotate(-345deg);
     transition: all 2s ease;
   }
 
   .ball3{
     width:30%;
     height: auto;
+    right:10%;
   }
   .showDogBall3 {
     opacity: 1;
-    transform: translateX(-150px) translateY(150px) rotate(-165deg);
+    transform: translateX(-100px) translateY(250px) rotate(-165deg);
     transition: all 2s ease;
   }
 
@@ -1004,18 +1009,18 @@ h4{
   }
   .showDogBall4 {
     opacity: 1;
-    transform: translateX(-20px) translateY(-20px)rotate(285deg);
+    transform: translateX(20px) translateY(320px)rotate(285deg);
     transition: all 2s ease;
   }
   .ClickDog{
     position: absolute;
-    top:52%;
-    left: 33%;
+    top:45%;
+    left: 30%;
   }
   h4{
     position:absolute;
-    top: 52%;
-    left:15%;
+    top:45%;
+    left:12%;
 
   }
   .riceball{
@@ -1027,7 +1032,7 @@ h4{
 
   }
   .ChickenToy{
-    width:10%;
+    width:6%;
     height:auto;
     position: relative;
     top:-20%;
@@ -1035,19 +1040,16 @@ h4{
     z-index: 3;
 }
   .Happytongue{
-    height: auto;
-    width:3%;
-    height: auto;
     transition: transform .2s; /* Animation */
   }
   .Happytongue:hover {
-    transform: scale(1.8); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    transform: scale(1.4); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
   }
   .dogwalk{
     position: absolute;
-    top:50%;
-    left:10%;
-    width:70%;
+    top:43%;
+    left:0%;
+    width:100%;
     height:auto;
 
   }
